--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Mathieu Taschereau-Dumouchel, Assistant Professor, Wharton School of University of Pennsylvania">
+    <meta name="author" content="Mathieu Taschereau-Dumouchel">
+    <meta name="keywords" content="Mathieu,Taschereau-Dumouchel,Wharton,Macroeconomics,Finance,Uncertainty,Coordination,Traps,Union,Threat,Network">
+
+
     <link rel="icon" href="img/favicon.ico">
 
     <title>Mathieu Taschereau-Dumouchel</title>
@@ -365,4 +368,16 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
   </body>
+
+  <!-- Google analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-39700367-2', 'auto');
+    ga('send', 'pageview');
+  </script>
+
 </html>
