Dropdown menu for "research"

--- a/index.html
+++ b/index.html
@@ -51,8 +51,15 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Contact</a></li>
-            <li><a href="#research">Research</a></li>
+            <li><a href="#">Contact</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Research <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#working-papers">Working papers</a></li>
+                <li><a href="#publications">Publications</a></li>
+                <li><a href="#discussions">Discussions</a></li>
+              </ul>
+            </li>
             <li><a href="#teaching">Teaching</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -95,12 +102,13 @@
 	</div>
 
   <a class="anchor" id="research"></a>
-
   <div class="main_title">
-    <div class="container" id="research">
+    <div class="container">
       <h2>Research</h2>
     </div>
   </div>
+
+  <a class="anchor" id="working-papers"></a>
   <div class="sub_title">
     <div class="container">
       <h3>Working Papers</h3>
@@ -220,7 +228,7 @@
     </div>
 
 
-
+    <a class="anchor" id="publications"></a>
     <div class="sub_title">
       <div class="container">
         <h3>Publications</h3>
@@ -257,6 +265,7 @@
 
 		</div>
 
+    <a class="anchor" id="discussions"></a>
     <div class="sub_title">
       <div class="container">
         <h3>Discussions</h3>
