--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="author" content="Mathieu Taschereau-Dumouchel">
     <meta name="keywords" content="Mathieu,Taschereau-Dumouchel,Wharton,Macroeconomics,Finance,Uncertainty,Coordination,Traps,Union,Threat,Network">
 
-
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="img/favicon.ico"> -->
 
     <title>Mathieu Taschereau-Dumouchel</title>
 
