--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<li>University of Pennsylvania</li>
 					</ul>
 					<h3>Research Interests</h3>
-					<p>Macroeconomics, Networks, Labor Economics</p>
+					<span class="interests"><p>Macroeconomics, Networks, Labor Economics</p></span>
 
 
 					<ul>
