Better padding phone

--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
 			<div class="container">
 				<div class="paper">
 					<h4 class="title">Aggregate Demand and the Dynamics of Unemployment</h4>
-
 					<ul>
 						<li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a>, June 2016</li>
             <li class="after-title">
@@ -323,14 +322,17 @@
           </ul>
         </div>
       </div>
+    </div>
 
-      <div class="title">
-        <div class="container" id="teaching">
-          <h2>Teaching</h2>
-        </div>
+    <a class="anchor" id="teaching"></a>
+    <div class="main_title">
+      <div class="container">
+        <h2>Teaching</h2>
       </div>
+    </div>
 
-      <div class="courses">
+
+    <div class="courses">
 
       <div class="container">
     		<div class="course">
@@ -360,9 +362,8 @@
   			</div>
       </div>
 		</div>
-    </div>
 
-  </div>
+
 
 
 
