Small change in padding

--- a/index.html
+++ b/index.html
@@ -331,6 +331,12 @@
       </div>
     </div>
 
+    <!-- <a class="anchor" id="working-papers"></a> -->
+    <div class="sub_title">
+      <div class="container">
+        <h3></h3>
+      </div>
+    </div>
 
     <div class="courses">
 
