Test google analytics tracking download

--- a/index.html
+++ b/index.html
@@ -121,9 +121,11 @@
 					<h4 class="title">Aggregate Demand and the Dynamics of Unemployment</h4>
 					<ul>
 						<li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a>, June 2016</li>
+
             <li class="after-title">
               <a data-toggle="collapse" href="#CoordUnemp">(abstract)</a>
-              <a target="_blank" href="files/papers/Coordination and the Dynamics of Unemployment/paper.pdf">(paper)</a>
+              <!-- <a target="_blank" href="files/papers/Coordination and the Dynamics of Unemployment/paper.pdf">(paper)</a> -->
+              <a target="_blank" onclick="var that=this;_gaq.push(['_trackEvent','Download','test',this.href]);setTimeout(function(){location.href=that.href;},400);return false;" href="files/papers/Coordination and the Dynamics of Unemployment/paper.pdf">(paper))</a>
               <a target="_blank" href="files/papers/Coordination and the Dynamics of Unemployment/slides.pdf">(slides)</a>
             </li>
             <!-- <li class="journal">Resubmitted to <strong>Journal of Finance</strong></li> -->
