--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-KHNX833');</script>
+    <!-- End Google Tag Manager -->
+
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,6 +47,12 @@
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHNX833"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -124,8 +140,7 @@
 
             <li class="after-title">
               <a data-toggle="collapse" href="#CoordUnemp">(abstract)</a>
-              <!-- <a target="_blank" href="files/papers/Coordination and the Dynamics of Unemployment/paper.pdf">(paper)</a> -->
-              <a target="_blank" onclick="var that=this;_gaq.push(['_trackEvent','Download','test',this.href]);setTimeout(function(){location.href=that.href;},400);return false;" href="files/papers/Coordination and the Dynamics of Unemployment/paper.pdf">(paper))</a>
+              <a target="_blank" href="files/papers/Coordination and the Dynamics of Unemployment/paper.pdf">(paper)</a>
               <a target="_blank" href="files/papers/Coordination and the Dynamics of Unemployment/slides.pdf">(slides)</a>
             </li>
             <!-- <li class="journal">Resubmitted to <strong>Journal of Finance</strong></li> -->
