--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<li>University of Pennsylvania</li>
 					</ul>
 					<h3>Research Interests</h3>
-					<span class="interests"><p>Macroeconomics, Networks, Labor Economics</p></span>
+					<span class="interests"><p>Macroeconomics, Labor Economics, Networks</p></span>
 
 
 					<ul>
