--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     })(window,document,'script','dataLayer','GTM-KHNX833');</script>
     <!-- End Google Tag Manager -->
 
+    <meta name="google-site-verification" content="LNIc2FaRCFdH74dR2Nl_AGxEgBsJJLE_gJBagKeDL1A" />
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
