Update email address

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                         <ul>
                             <li><span class="glyphicon glyphicon-user"></span> <a class="cv" target="_blank" href="files/cv.pdf">Curriculum Vitae</a></li>
-                            <li><span class="glyphicon glyphicon-envelope"></span> <a class="email" href="mailto:mathieu@wharton.upenn.edu">mathieu@wharton.upenn.edu</a></li>
+                            <li><span class="glyphicon glyphicon-envelope"></span> <a class="email" href="mailto:mathtd@gmail.com">mathtd@gmail.com</a></li>
                             <li><span class="glyphicon glyphicon-globe"></span> 3620 Locust Walk, 2320 SHDH, Philadelphia, PA 19104</li>
                         </ul>
                     </div>
