--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="Mathieu Taschereau-Dumouchel, Assistant Professor, Wharton School of University of Pennsylvania">
+<meta name="description" content="Mathieu Taschereau-Dumouchel, Assistant Professorof Economics, Cornell University">
 <meta name="author" content="Mathieu Taschereau-Dumouchel">
-<meta name="keywords" content="Mathieu,Taschereau-Dumouchel,Wharton,Macroeconomics,Finance,Uncertainty,Coordination,Traps,Union,Threat,Network">
+<meta name="keywords" content="Mathieu,Taschereau-Dumouchel,Cornell,Macroeconomics,Finance,Uncertainty,Coordination,Traps,Union,Threat,Network">
 
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 <!-- <link rel="icon" href="img/favicon.ico"> -->
@@ -94,13 +94,13 @@
                         <img class="photo" src="img/2671112_orig.png" alt="Photo" title="Photo">
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <img class="logo" src="img/wharton-logo.png" alt="Wharton" title="Wharton School University of Pennsylvania">
+                        <img class="logo" src="img/cornell_logo.svg" alt="Cornell" title="Cornell University">
                         <!-- <img class="photo-small visible-xs" src="img/2671112_orig.png" alt="Photo small" title="Photo small"> -->
                         <h2 class="name">Mathieu Taschereau-Dumouchel</h2>
                         <ul>
-                            <li>Assistant Professor of Finance</li>
-                            <li>The Wharton School</li>
-                            <li>University of Pennsylvania</li>
+                            <li>Assistant Professor</li>
+                            <li>Economics Department</li>
+                            <li>Cornell University</li>
                         </ul>
                         <h3>Research Interests</h3>
                         <span class="interests"><p>Macroeconomics, Labor Economics, Networks</p></span>
@@ -108,8 +108,8 @@
 
                         <ul>
                             <li><span class="glyphicon glyphicon-user"></span> <a class="cv" target="_blank" href="files/cv.pdf">Curriculum Vitae</a></li>
-                            <li><span class="glyphicon glyphicon-envelope"></span> <a class="email" href="mailto:mathtd@gmail.com">mathtd@gmail.com</a></li>
-                            <li><span class="glyphicon glyphicon-globe"></span> 3620 Locust Walk, 2320 SHDH, Philadelphia, PA 19104</li>
+                            <li><span class="glyphicon glyphicon-envelope"></span> <a class="email" href="mailto:mathtd@cornell.edu">mathtd@cornell.edu</a></li>
+                            <li><span class="glyphicon glyphicon-globe"></span> 480 Uris Hall, Cornell University, Ithaca NY 14853</li>
                         </ul>
                     </div>
                     <div class="col-md-1 hidden-sm hidden-xs">
