--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                         <!-- <img class="photo-small visible-xs" src="img/2671112_orig.png" alt="Photo small" title="Photo small"> -->
                         <h2 class="name">Mathieu Taschereau-Dumouchel</h2>
                         <ul>
-                            <li>Assistant Professor</li>
-                            <li>Economics Department</li>
+                            <li>Assistant Professor of Economics</li>
+                            <li>Jain Faculty Fellow</li>
                             <li>Cornell University</li>
                         </ul>
                         <h3>Research Interests</h3>
