--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                     <h4 class="title">The Union Threat</h4>
 
                     <ul>
-                        <li class="co-authors">February 2015</li>
-                        <li class="journal">revise and resubmit, <I>Review of Economic Studies</I></li>
+                        <li class="co-authors">October 2017</li>
+                        <li class="journal">revise and resubmit, <B>Review of Economic Studies</B></li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
                             <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
@@ -287,7 +287,7 @@
 
                     <ul>
                         <li class="co-authors">with <a  target="_blank" href="http://www.econ.ucla.edu/pfajgelbaum/">Pablo Fajgelbaum</a> and <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a>, May 2016</li>
-                        <li class="journal">accepted for publication, <I>Quarterly Journal of Economics</I></li>
+                        <li class="journal"><B>The Quarterly Journal of Economics,</B>, Volume 132, Issue 4, 1 November 2017, Pages 1641–1692</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#collapse_UT">(abstract)</a>
                             <a target="_blank" href="files/papers/Uncertainty Traps/paper.pdf">(paper)</a>
