--- a/index.html
+++ b/index.html
@@ -134,6 +134,26 @@
 
         <div class="papers">
 
+            <div class="container">
+                <div class="paper">
+                    <h4 class="title">The Union Threat</h4>
+
+                    <ul>
+                        <li class="co-authors">October 2017</li>
+                        <li class="journal">revise and resubmit, <B>Review of Economic Studies</B></li>
+                        <li class="after-title">
+                            <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
+                            <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
+                        </li>
+                    </ul>
+
+                    <div class="panel panel-transparent">
+                        <div id="UnionThreat" class="panel-collapse collapse">
+                            <div class="panel-body">We develop a quantitative theory of business cycles with coordination failures. Because of demand complementarities, firms seek to coordinate production and multiple equilibria arise. We use a global game approach to discipline equilibrium selection and show that the unique equilibrium exhibits two steady states. Coordination on high production may fail after a large transitory shock, pushing the economy in a quasi-permanent recession. Our calibrated model rationalizes various features of the Great Recession. Government spending, while generally harmful, can increase welfare when the economy is transitioning between steady states. Simple subsidies implement the efficient allocation.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="container">
                 <div class="paper">
@@ -206,26 +226,7 @@
             </div>
 
 
-            <div class="container">
-                <div class="paper">
-                    <h4 class="title">The Union Threat</h4>
 
-                    <ul>
-                        <li class="co-authors">October 2017</li>
-                        <li class="journal">revise and resubmit, <B>Review of Economic Studies</B></li>
-                        <li class="after-title">
-                            <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
-                            <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
-                        </li>
-                    </ul>
-
-                    <div class="panel panel-transparent">
-                        <div id="UnionThreat" class="panel-collapse collapse">
-                            <div class="panel-body">We develop a quantitative theory of business cycles with coordination failures. Because of demand complementarities, firms seek to coordinate production and multiple equilibria arise. We use a global game approach to discipline equilibrium selection and show that the unique equilibrium exhibits two steady states. Coordination on high production may fail after a large transitory shock, pushing the economy in a quasi-permanent recession. Our calibrated model rationalizes various features of the Great Recession. Government spending, while generally harmful, can increase welfare when the economy is transitioning between steady states. Simple subsidies implement the efficient allocation.</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
 
             <div class="container">
@@ -286,7 +287,7 @@
                     <h4 class="title">Uncertainty Traps</h4>
 
                     <ul>
-                        <li class="co-authors">with <a  target="_blank" href="http://www.econ.ucla.edu/pfajgelbaum/">Pablo Fajgelbaum</a> and <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a>, May 2016</li>
+                        <li class="co-authors">with <a  target="_blank" href="http://www.econ.ucla.edu/pfajgelbaum/">Pablo Fajgelbaum</a> and <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
                         <li class="journal"><B>The Quarterly Journal of Economics,</B>, Volume 132, Issue 4, 1 November 2017, Pages 1641–1692</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#collapse_UT">(abstract)</a>
