--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
                     <ul>
                         <li class="co-authors">with <a  target="_blank" href="http://www.econ.ucla.edu/pfajgelbaum/">Pablo Fajgelbaum</a> and <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
-                        <li class="journal"><B>The Quarterly Journal of Economics,</B>, Volume 132, Issue 4, 1 November 2017, Pages 1641–1692</li>
+                        <li class="journal"><B>The Quarterly Journal of Economics</B>, Volume 132, Issue 4, 1 November 2017, Pages 1641–1692</li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#collapse_UT">(abstract)</a>
                             <a target="_blank" href="files/papers/Uncertainty Traps/paper.pdf">(paper)</a>
