--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="Mathieu Taschereau-Dumouchel, Assistant Professorof Economics, Cornell University">
+<meta name="description" content="Mathieu Taschereau-Dumouchel, Assistant Professor of Economics, Cornell University">
 <meta name="author" content="Mathieu Taschereau-Dumouchel">
-<meta name="keywords" content="Mathieu,Taschereau-Dumouchel,Cornell,Macroeconomics,Finance,Uncertainty,Coordination,Traps,Union,Threat,Network">
+<meta name="keywords" content="Mathieu,Taschereau-Dumouchel,Cornell,Macroeconomics,Economics,Uncertainty,Coordination,Traps,Union,Threat,Network">
 
 <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 <!-- <link rel="icon" href="img/favicon.ico"> -->
