--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
 </head>
 
 <body>
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHNX833"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
 
 
-
+<!--
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
@@ -79,14 +80,14 @@
                         </li>
                         <li><a href="#teaching">Teaching</a></li>
                     </ul>
-                </div><!--/.nav-collapse -->
+                </div>
             </div>
-        </nav>
+        </nav> -->
 
 
 
         <div style="background:transparent !important" class="jumbotron">
-            <div class="container" >
+            <div class="container">
                 <div class="row">
                     <div class="col-md-1 hidden-sm hidden-xs">
                     </div>
@@ -100,9 +101,8 @@
                         <ul>
                             <li>Assistant Professor of Economics</li>
                             <li>Jain Faculty Fellow</li>
-                            <li>Cornell University</li>
                         </ul>
-                        <h3>Research Interests</h3>
+                        <!-- <h3>Research Interests</h3> -->
                         <span class="interests"><p>Macroeconomics, Labor Economics, Networks</p></span>
 
 
@@ -118,15 +118,15 @@
             </div>
         </div>
 
-        <a class="anchor" id="research"></a>
+        <!-- <a class="anchor" id="research"></a>
         <div class="main_title">
             <div class="container">
                 <h2>Research</h2>
             </div>
-        </div>
+        </div> -->
 
         <a class="anchor" id="working-papers"></a>
-        <div class="sub_title">
+        <div class="main_title">
             <div class="container">
                 <h3>Working Papers</h3>
             </div>
@@ -139,8 +139,8 @@
                     <h4 class="title">The Union Threat</h4>
 
                     <ul>
-                        <li class="co-authors">October 2017</li>
-                        <li class="journal">revise and resubmit, <B>Review of Economic Studies</B></li>
+
+                        <li class="journal">revise and resubmit at the <B>Review of Economic Studies</B></li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#UnionThreat">(abstract)</a>
                             <a target="_blank" href="files/papers/The Union Threat/paper.pdf">(paper)</a>
@@ -159,14 +159,12 @@
                 <div class="paper">
                     <h4 class="title">Cascades and Fluctuations in an Economy with an Endogenous Production Network</h4>
                     <ul>
-                        <li class="co-authors"> July 2017</li>
 
                         <li class="after-title">
                             <a data-toggle="collapse" href="#Network">(abstract)</a>
                             <a target="_blank" href="files/papers/Network/paper.pdf">(paper)</a>
                             <a target="_blank" href="files/papers/Network/slides.pdf">(slides)</a>
                         </li>
-                        <!-- <li class="journal">Resubmitted to <strong>Journal of Finance</strong></li> -->
                     </ul>
 
 
@@ -184,14 +182,13 @@
                 <div class="paper">
                     <h4 class="title">Aggregate Demand and the Dynamics of Unemployment</h4>
                     <ul>
-                        <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a>, June 2016</li>
+                        <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
 
                         <li class="after-title">
                             <a data-toggle="collapse" href="#CoordUnemp">(abstract)</a>
                             <a target="_blank" href="files/papers/Coordination and the Dynamics of Unemployment/paper.pdf">(paper)</a>
                             <a target="_blank" href="files/papers/Coordination and the Dynamics of Unemployment/slides.pdf">(slides)</a>
                         </li>
-                        <!-- <li class="journal">Resubmitted to <strong>Journal of Finance</strong></li> -->
                     </ul>
 
 
@@ -208,8 +205,7 @@
                 <div class="paper">
                     <h4 class="title">Coordinating Business Cycles</h4>
                     <ul>
-                        <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a>, October 2015</li>
-                        <!-- <li class="journal">Resubmitted to <strong>Journal of Finance</strong></li> -->
+                        <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#CBC">(abstract)</a>
                             <a target="_blank" href="files/papers/Coordinating Business Cycles/paper.pdf">(paper)</a>
@@ -233,8 +229,7 @@
                 <div class="paper">
                     <h4 class="title">Learning to Coordinate Over the Business Cycles</h4>
                     <ul>
-                        <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a>, June 2014</li>
-                        <!-- <li class="journal">Revise and resubmit, <strong>Review of Economic Studies</strong></li> -->
+                        <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
                         <li class="after-title">
                             <a data-toggle="collapse" href="#LearnCoord">(abstract)</a>
                             <a target="_blank" href="files/papers/Lerning to Coordinate/slides.pdf">(slides)</a>
@@ -256,7 +251,6 @@
                     <h4 class="title">Optimal Redistributive Policy in a Labor Market with Search and Endogenous Participation</h4>
                     <ul>
                         <li class="co-authors">with <a  target="_blank" href="http://sites.google.com/site/edouardschaal/">Edouard Schaal</a></li>
-                        <!-- <li class="journal">Revise and resubmit, <strong>Review of Economic Studies</strong></li> -->
                         <li class="after-title">
                             <a data-toggle="collapse" href="#collapse_OptimUnemp">(abstract)</a>
                             <a target="_blank" href="files/papers/Labor tax/paper.pdf">(paper)</a>
@@ -274,9 +268,9 @@
 
 
         <a class="anchor" id="publications"></a>
-        <div class="sub_title">
+        <div class="main_title">
             <div class="container">
-                <h3>Publications</h3>
+                <h3>Publication</h3>
             </div>
         </div>
 
@@ -311,7 +305,7 @@
         </div>
 
         <a class="anchor" id="discussions"></a>
-        <div class="sub_title">
+        <div class="main_title">
             <div class="container">
                 <h3>Discussions</h3>
             </div>
@@ -373,18 +367,21 @@
         <a class="anchor" id="teaching"></a>
         <div class="main_title">
             <div class="container">
-                <h2>Teaching</h2>
+                <h3>Teaching</h3>
             </div>
         </div>
 
-        <!-- <a class="anchor" id="working-papers"></a> -->
-        <div class="sub_title">
-            <div class="container">
-                <h3></h3>
-            </div>
-        </div>
 
         <div class="courses">
+
+            <div class="container">
+                <div class="course">
+                    <h4 class="title"> ECON 6130 - Macroeconomics</h4>
+                    <ul>
+                        <li class="subtitle">Cornell PhD, Fall 2017</li>
+                    </ul>
+                </div>
+            </div>
 
             <div class="container">
                 <div class="course">
